# python-utils

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: automerge.yml  test.yml
src/my_project/: __init__.py  main.py  settings.py
src/python_utils/: __init__.py  athrottle.py  dict_diff.py  folder_management.py  main.py
tests/: test_athrottle.py  test_dict_diff.py  test_folder_management.py  test_format_hhmmss.py  test_main.py
