# View options here: https://python-poetry.org/docs/configuration
[tool.poetry]
# Change this to match the directory your project is in
# Poetry will install your project as an editable package
name = "python_utils"
version = "1.1.0"
description = "Collection of utility functions."
authors = ["extrange <29305375+extrange@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pyright = "^1.1.377"
ruff = "^0.6.4"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# pre-commit: make pyright use the venv
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/explanation/goodpractices.html#which-import-mode
addopts = ["--import-mode=importlib"]
