[project]
name = "python_utils"
version = "1.2.0"
description = "Collection of utility functions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-cov>=5.0.0",
]


[tool.pyright]
# pre-commit: make pyright use the venv
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/explanation/goodpractices.html#which-import-mode
addopts = ["--import-mode=importlib"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.384",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
]
package = true
